Improve GCC compatibility by adding stubs for some builtins.

These are important when parsing the GCC provided intrinsics for
SSE & friends. The new unit test ensures that it works as intended.

Some caveats:

- This won't work properly on non-ia32 platforms.
- Potentially we need similar things for compatibility with the Intel
  compiler.
- There are still some errors generated in xmmintrin.h b/c some
  builtins are defined by both, GCC and Clang, but the latter are
  stricter. Thus we get errors reported when the GCC intrinsics try to
  pass const pointers as non-const parameters etc.

BUG: 354311